small fixes 3